content/terraform-policy/v0.1.x/docs/policy/test/run-tests.mdx
---
page_title: Run policy tests
description: >-
  Learn how to run and debug Terraform policy tests locally.
---

# Run policy tests

Once you have written your policy tests, run them using the `tfpolicy test` command.

```shell-session
$ tfpolicy test --policies=/path/to/policies
```

You can provide the path to both the policy files and the test files. If you only specify the path to your policy files, the tests in that path will be executed.

```shell-session
$ tfpolicy test --policies=/path/to/policies --tests=/path/to/tests
```

Terraform policy will load values for input variables from you local environment, with the prefix `TF_VAR_`. For example:

```shell session
$ export TF_VAR_instance_type=t3.medium && tfpolicy test --policies=/path/to/policies --tests=/path/to/tests
```

## Test output

When you run tests, tfpolicy provides detailed output showing the status of each test case:

```shell-session
$ tfpolicy test --policies=.
# encrypted_ebs.policytest.hcl... running
# resource.aws_ebs_volume.ebs_vol... running
# resource.aws_ebs_volume.ebs_vol... pass
# resource.aws_ebs_volume.ebs_vol2... running
# resource.aws_ebs_volume.ebs_vol2... pass
# encrypted_ebs.policytest.hcl... pass
```

## Debugging Failed Tests

When a test fails, tfpolicy will provide detailed error messages indicating:

- Which policy failed
- Which test case failed
- The specific condition that was not met
- The error message defined in the policy

```text
# resource.aws_instance.test_case... fail
Error: Policy violation
  Expected: pass
  Actual: fail
  Message: Instance type must be t3.micro
```

Use this information to debug failed tests.

## Running Tests Locally

Run all tests in the current directory:

```shell-session
$ tfpolicy test --policies=.
```

Run tests for a specific policy file:

```shell-session
$ tfpolicy test --policies=policies/tagging.policy.hcl --tests=tests/tagging.policytest.hcl
```

Run with verbose output:

```shell-session
$ tfpolicy test --policies=. -v
```
