content/terraform-policy/v1.0.x/docs/policy/test/run-tests.mdx
---
page_title: Run policy tests
description: >-
  Learn how to run and debug Terraform policy tests locally.
---

# Run policy tests

Once you have written your policy tests, run them using the `tfpolicy test` command.

```shell-session
$ tfpolicy test --policies=/path/to/policies
```

You can provide the path to both the policy files and the test files. If you only specify the path to your policy files, the tests in that path will be executed.

```shell-session
$ tfpolicy test --policies=/path/to/policies --tests=/path/to/tests
```

FIXME: Setting input variables

## Test output

When you run tests, tfpolicy provides detailed output showing the status of each test case:

```shell-session
$ tfpolicy test --policies=.
# encrypted_ebs.policytest.hcl... running
# resource.aws_ebs_volume.ebs_vol... running
# resource.aws_ebs_volume.ebs_vol... pass
# resource.aws_ebs_volume.ebs_vol2... running
# resource.aws_ebs_volume.ebs_vol2... pass
# encrypted_ebs.policytest.hcl... pass
```

## Debugging Failed Tests

When a test fails, tfpolicy will provide detailed error messages indicating:

- Which policy failed
- Which test case failed
- The specific condition that was not met
- The error message defined in the policy

Use this information to debug failed tests. For example, when Terraform policy reports a test failure:

1. Verify your test mock data matches the expected format
2. Check that your policy conditions are correct
3. Ensure your test expectations (pass/fail) align with the policy behavior

## Running Tests Locally

Run all tests in the current directory:

```shell-session
$ tfpolicy test --policies=.
```

Run tests for a specific policy file:

```shell-session
$ tfpolicy test --policies=policies/tagging.policy.hcl --tests=tests/tagging.policytest.hcl
```

Run with verbose output:

```shell-session
$ tfpolicy test --policies=. -v
```

## Interpreting Test Results

### Understanding test output

```shell-session
$ tfpolicy test --policies=.
# tagging.policytest.hcl... running
# resource.aws_instance.compliant... running
# resource.aws_instance.compliant... pass
# resource.aws_instance.non_compliant... running
# resource.aws_instance.non_compliant... pass
# tagging.policytest.hcl... pass
```

- Each test case shows its status (running/pass/fail)
- `pass` means the test behaved as expected
- `fail` means the test did not behave as expected

### Debugging failed tests

When a test fails, tfpolicy provides detailed error messages:

```
# resource.aws_instance.test_case... fail
Error: Policy violation
  Expected: pass
  Actual: fail
  Message: Instance type must be t3.micro
```

To debug:
1. Check the mock data matches the expected format
2. Verify the policy condition is correct
3. Ensure `expect_failure` is set correctly
4. Review the error message for clues

### Coverage reporting

While tfpolicy doesn't provide built-in coverage reporting, you can track coverage by:

- Documenting test scenarios in comments
- Creating test cases for each policy condition
- Testing both positive and negative cases
- Reviewing policy code to ensure all paths are tested

## Best practices

We recommend that you follow these best practices when you test your policies:

- Keep test files in the same directory as your policy files or in a dedicated `tests/` subdirectory
- Name test files to match their corresponding policy files (e.g., `encryption.policy.hcl` and `encryption.policytest.hcl`)
- Include both positive (passing) and negative (failing with `expect_failure = true`) test cases
- Test edge cases and boundary conditions
- Document complex test scenarios with comments
